# labgrid-power-up

./: .gitignore  README.md  wishlist.md
basic_setup/: README.md  beagleplaybootstrategy.py  ecogrid-client.yaml  ecogrid-env.yaml
basic_setup/pytest/: conftest.py  test_tftp.py
boardfarm/: pyproject.toml
boardfarm/bananapi-f3/: README.md  client.yaml  exporter.yaml  strategy.py
boardfarm/bananapi-f3/pytest/: conftest.py  pytest.ini
boardfarm/beagleplay/: bp-client.yaml  bp-exporter.yaml  exporter.yaml  pytest.ini
boardfarm/beagleplay/pytest/: test_tftp.py
boardfarm/common/: pyproject.toml
boardfarm/common/src/boardfarm_common/: helpers.py
boardfarm/muse-pi-pro/: README.md  client.yaml  exporter.yaml  muse-pi-pro-client.yaml  muse_pi_pro_boot_strategy.py  pytest.ini  strategy.py
boardfarm/muse-pi-pro/pytest/: conftest.py  pytest.ini
boardfarm/orangepi-rv2/: README.md  client.yaml  exporter.yaml  orangepi-rv2-client.yaml  orangepi-rv2-exporter.yaml  orangepirv2bootstrategy.py  strategy.py
boardfarm/orangepi-rv2/pytest/: conftest.py  pytest.ini  test_tftp.py
boardfarm/qemuriscv64/: conftest.py  env.yaml  qemu_strategy.py
boardfarm/qemuriscv64/tests/: test_boot.py  test_ptests.py
boardfarm/visionfive2/: vf2-client.yaml  vf2-exporter.yaml  visionfive2bootstrategy.py
docker_example/: Dockerfile  README.md  dockerstrategy.py  env.yaml
ecogrid/: ecogrid-client.yaml
ecogrid/pytest/: conftest.py  test_emmc.py  test_tftp.py
exporter-configs/: dual-place-conf.yaml  ecogrid.yaml
helper_scripts/: uboot_test.py
labgrid/: beagleplaybootstrategy.py  ecogrid-client.yaml  ecogrid-env.yaml  ecogrid-exporter.yaml
openocddriver_example/: flash_with_blinky.sh  lg-openocd-env.yaml  lg-openocd-exporter.yaml
pytest/: test_emmc.py
qemu_example/: README.md  conftest.py  lg-qemu-env.yaml  pytest.ini  qemunetworkstrategy.py  test_tools.py
systemd_services/: README.md  labgrid-bananapi-f3-exporter.service  labgrid-coordinator.service  labgrid-muse-pi-pro-exporter.service  labgrid-orangepi-rv2-exporter.service
udev/: 90-copilot.rules  99-gpio.rules
workbench/: README.md  wb-client.yaml  wb-exporter.yaml
yocto_qemu/: lg-qemu-env.yaml
