[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[project]
name = "boardfarm-common"
version = "0.1.0"
description = "Shared helpers and fixtures for boardfarm pytest suites"
requires-python = ">=3.11"
dependencies = [
    "ansicolors",
    "labgrid",
    "pytest",
    "pytest-html",
]

[tool.uv.sources]
labgrid = { git = "https://github.com/labgrid-project/labgrid", branch = "master" }

# Auto-loaded into any pytest run inside this venv:
[project.entry-points.pytest11]
boardfarm_common = "boardfarm_common.fixtures"
